# rl-recruits

./: .env.example  .gitignore  Dockerfile  README.md  claude-md.md  client.py  guess.md  models.py  openenv.md  openenv.yaml  package-lock.json  plan.md  pyproject.toml  rules  test_client.py  test_env.py
docs/: TRAINING_GUIDE.md
env/: __init__.py  async_env.py  config.py  core.py  llm.py  models.py  simulation.py  staffing_env.py
memory/: MEMORY.md
openenv_my_env.egg-info/: PKG-INFO
resources/: slides.html
server/: Dockerfile  app.py  my_env_environment.py  staffing_environment.py
tests/: test_async_env.py  test_env.py
training/: __init__.py  config.py  dry_run.py  infer.py  log.py  metrics.py  metrics_summary.json  policies.py  prompts.py  reinforce.py  rollout.py  thoughts.md  train_grpo.py
ui/: dashboard.py
wandb/: latest-run
wandb/run-20260308_123254-3fvxkmqo/: run-3fvxkmqo.wandb
wandb/run-20260308_124033-0i8isx6n/: run-0i8isx6n.wandb
wandb/run-20260308_124303-x7e6th8v/: run-x7e6th8v.wandb
wandb/run-20260308_124940-ioax6jyk/: run-ioax6jyk.wandb
wandb/run-20260308_125219-vtm6cpms/: run-vtm6cpms.wandb
wandb/run-20260308_125437-mdq65j86/: run-mdq65j86.wandb
wandb/run-20260308_130656-t1n6asue/: run-t1n6asue.wandb
wandb/run-20260308_131241-mbjibdyn/: run-mbjibdyn.wandb
wandb/run-20260308_131603-tqapxxc1/: run-tqapxxc1.wandb
wandb/run-20260308_131624-6acpym4i/: run-6acpym4i.wandb
wandb/run-20260308_153212-09tvr0ew/: run-09tvr0ew.wandb
wandb/run-20260308_153835-2yqnm85h/: run-2yqnm85h.wandb
wandb/run-20260308_154051-8fflkgxi/: run-8fflkgxi.wandb
wandb/run-20260308_154444-9ojnfv8k/: run-9ojnfv8k.wandb
wandb/run-20260308_154509-ou4nmjov/: run-ou4nmjov.wandb
wandb/run-20260308_154541-k70x7kpj/: run-k70x7kpj.wandb
wandb/run-20260308_154808-wdi67fvd/: run-wdi67fvd.wandb
wandb/run-20260308_155145-n5qw81yd/: run-n5qw81yd.wandb
(+55 files in other folders)
